<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
<TextView
        android:id="@+id/all_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/all_area_context"
        android:textSize="17sp" 
		android:textColor="@color/ORANGE_FONT"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />
    <TextView
        android:id="@+id/area_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_one_context"
        android:textSize="17sp" 
		android:textColor="@color/GRAY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />
    <TextView
        android:id="@+id/area_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_two_context"
        android:textSize="17sp" 
		android:textColor="@color/GRAY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />
    <TextView
        android:id="@+id/area_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_three_context"
        android:textSize="17sp" 
		android:textColor="@color/GRAY"/>
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />
    <TextView
        android:id="@+id/area_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_four_context"
        android:textSize="17sp" 
		android:textColor="@color/GRAY"/>

</LinearLayout>