<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/hair_style_select_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hari_selection_style_all"
        android:textSize="17sp" 
		android:textColor="@color/ORANGE_FONT"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />

    <TextView
        android:id="@+id/hair_style_select_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hari_selection_style_short"
        android:textSize="17sp" 
        android:textColor="@color/GRAY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />

    <TextView
        android:id="@+id/hair_style_select_long"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hari_selection_style_long"
        android:textSize="17sp" 
        android:textColor="@color/GRAY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />

    <TextView
        android:id="@+id/hair_style_select_spread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hari_selection_style_spread"
        android:textSize="17sp" 
        android:textColor="@color/GRAY"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/LIGHT_GRAY" />

    <TextView
        android:id="@+id/hair_style_select_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_hari_selection_style_middle"
        android:textSize="17sp" 
        android:textColor="@color/GRAY"/>

</LinearLayout>