<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hair_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bgcolor"
    tools:context="com.hair.salon.MainActivity$HairFragment" >

    <include
        android:id="@+id/title_layout"
        android:layout_alignParentTop="true"
        layout="@layout/base_title" />

    <LinearLayout
        android:id="@+id/salon_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_layout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/salon_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/activity_salon_all_area"
            android:textSize="20sp" 
            android:textColor="@color/GRAY"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/GRAY" />

        <TextView
            android:id="@+id/salon_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_salon_order"
            android:textSize="20sp" 
            android:textColor="@color/GRAY"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/salon_selection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/salon_top_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="5dp"
        android:background="@color/WHITE"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/hair_selection_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/activity_salon_search"
            android:textSize="20sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/salon_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/salon_selection_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:cacheColorHint="#00000000"
        android:fadeScrollbars="true"
        android:horizontalSpacing="10dp"
        android:listSelector="#00000000"
        android:scrollbars="none"
        android:verticalSpacing="10dp" />

</RelativeLayout>